--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>COVID-19 Hrvatska</title>
         <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
         <script src="https://canvasjs.com/assets/script/canvasjs.stock.min.js"></script>
-        <script src="js/javascript.js"></script>
+        <script src="js/main.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body style="padding: 0; margin: 0; min-width: 755px;">
         <div><p style="margin: 0; padding: 15px; width: 100%; background: slategray; font-family: Roboto; font-size: 25px; color: white; text-align: center; box-shadow: 0px 0px 15px #777;"><img src="favicon.png" style="height: 20px;"> COVID19 Hrvatska</p></div>
