--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>COVID-19 Hrvatska</title>
         <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
         <script src="https://canvasjs.com/assets/script/canvasjs.stock.min.js"></script>
-        <script src="js/main.js"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+        <link rel="stylesheet" href="css/style.css">
     </head>
-    <body style="padding: 0; margin: 0; min-width: 755px;">
-        <div><p style="margin: 0; padding: 15px; width: 100%; background: slategray; font-family: Roboto; font-size: 26px; color: white; text-align: center; box-shadow: 0px 0px 15px #777;"><img src="favicon.png" alt="COVID-19" style="height: 20px;"> COVID-19 Hrvatska</p></div>
+    <body style="padding: 0; margin: 0; min-width: 480px;">
+        <div style="width: 100%;"><p style="margin: 0; padding: 15px; background: slategray; font-family: Roboto; font-size: 26px; color: white; text-align: center; box-shadow: 0px 0px 15px #777;"><img src="favicon.png" alt="COVID-19" style="height: 20px;"> COVID-19 Hrvatska</p></div>
         <div style="height: 20px;"></div>
         <div><p id="danasDatum" style="margin: auto; padding: 10px 0px; width: 80%; background: #515C65; font-family: Roboto; font-size: 20px; color: white; text-align: center; box-shadow: 0px 0px 15px #777;">Loading...</p></div>
         <div style="height: 20px;"></div>
@@ -36,21 +36,22 @@
             </div>
         </div></div>
         <div style="height: 20px;"></div>
-        <div style="height: 450px; width: 80%; margin: auto; padding: 20px 0 20px 0; background: #32373A; box-shadow: 0px 0px 15px #777;">
-            <div id="chartContainerHrvatska" style="height: 90%; width: 95%; margin: auto;"></div>
+        <div style="height: 540px; width: 80%; margin: auto; background: #32373A; box-shadow: 0px 0px 15px #777;">
+            <div style="height: 500px; padding: 20px;"><div id="chartContainerHrvatska" style="margin: auto;"></div></div>
         </div>
         <div style="height: 20px;"></div>
-        <div style="height: 450px; width: 80%; margin: auto; padding: 20px 0 20px 0; background: #32373A; box-shadow: 0px 0px 15px #777;">
-            <div id="chartContainerZupanijePotvrdeni" style="height: 90%; width: 95%; margin: auto;"></div>
+        <div class="chartHeightWrap" style="height: 540px; width: 80%; margin: auto; padding: 20px 0 20px 0; background: #32373A; box-shadow: 0px 0px 15px #777;">
+            <div class="chartHeight" style="height: 500px; padding: 20px;"><div id="chartContainerZupanijePotvrdeni" style="height: 90%; width: 95%; margin: auto;"></div></div>
         </div>
         <div style="height: 20px;"></div>
-        <div style="height: 450px; width: 80%; margin: auto; padding: 20px 0 20px 0; background: #32373A; box-shadow: 0px 0px 15px #777;">
-            <div id="chartContainerZupanijeAktivni" style="height: 90%; width: 95%; margin: auto;"></div>
+        <div class="chartHeightWrap" style="height: 540px; width: 80%; margin: auto; padding: 20px 0 20px 0; background: #32373A; box-shadow: 0px 0px 15px #777;">
+            <div class="chartHeight" style="height: 500px; padding: 20px;"><div id="chartContainerZupanijeAktivni" style="height: 90%; width: 95%; margin: auto;"></div></div>
         </div>
         <div style="height: 20px;"></div>
-        <div style="height: 450px; width: 80%; margin: auto; padding: 20px 0 20px 0; background: #32373A; box-shadow: 0px 0px 15px #777;">
-            <div id="chartContainerZupanijePreminuli" style="height: 90%; width: 95%; margin: auto;"></div>
+        <div class="chartHeightWrap" style="height: 540px; width: 80%; margin: auto; padding: 20px 0 20px 0; background: #32373A; box-shadow: 0px 0px 15px #777;">
+            <div class="chartHeight" style="height: 500px; padding: 20px;"><div id="chartContainerZupanijePreminuli" style="height: 90%; width: 95%; margin: auto;"></div></div>
         </div>
         <div style="height: 20px;"></div>
+        <script src="js/main.js"></script>
     </body>
 </html>
