--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/png" href="favicon.png"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>COVID-19 Hrvatska</title>
-        <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-        <script src="https://canvasjs.com/assets/script/canvasjs.stock.min.js"></script>
+        <link rel="icon" type="image/png" href="favicon.png"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -52,6 +51,8 @@
             <div class="chartHeight" style="height: 500px; padding: 20px;"><div id="chartContainerZupanijePreminuli" style="height: 90%; width: 95%; margin: auto;"></div></div>
         </div>
         <div style="height: 20px;"></div>
+        <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+        <script src="https://canvasjs.com/assets/script/canvasjs.stock.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
