--- a/index.html
+++ b/index.html
@@ -17,26 +17,28 @@
         <div style="width: 80%; display: inline-flex; flex-wrap: wrap; gap: 20px;">
             <div id="brojeviDanasHrvatska" style="flex: auto; padding: 10px; background: #515C65; box-shadow: 0px 0px 15px #777; font-family: Roboto; font-size: 16px; color: white; text-align: center;">
                 <p style="margin: 0; padding: 8px; font-size: 20px;">Hrvatska</p>
+                <p style="margin: 0; padding: 4px; color: #00E5FF;">Aktivni: <span id="danasAktivniHrvatska" style="color: white; font-weight: bold;"></span></p>
                 <p style="margin: 0; padding: 4px; color: #FFAB40;">Potvrđeni: <span id="danasPotvrdeniHrvatska" style="color: white; font-weight: bold;"></span>/<span id="sveukupnoPotvrdeniHrvatska" style="color: white;"></span></p>
                 <p style="margin: 0; padding: 4px; color: #69F0AE;">Izliječeni: <span id="danasIzlijeceniHrvatska" style="color: white; font-weight: bold;"></span>/<span id="sveukupnoIzlijeceniHrvatska" style="color: white;"></span></p>
                 <p style="margin: 0; padding: 4px; color: #FF5252;">Preminuli: <span id="danasPreminuliHrvatska" style="color: white; font-weight: bold;"></span>/<span id="sveukupnoPreminuliHrvatska" style="color: white;"></span></p>
             </div>
             <div id="brojeviDanasPGZ" style="flex: auto; padding: 10px; background: #515C65; box-shadow: 0px 0px 15px #777; font-family: Roboto; font-size: 16px; color: white; text-align: center;">
                 <p style="margin: 0; padding: 8px; font-size: 20px;">Primorsko-goranska</p>
+                <p style="margin: 0; padding: 4px; color: #00E5FF;">Aktivni: <span id="danasAktivniPGZ" style="color: white; font-weight: bold;"></span></p>
                 <p style="margin: 0; padding: 4px; color: #FFAB40;">Potvrđeni: <span id="danasPotvrdeniPGZ" style="color: white; font-weight: bold;"></span>/<span id="sveukupnoPotvrdeniPGZ" style="color: white;"></span></p>
-                <p style="margin: 0; padding: 4px; color: #69F0AE;">Aktivni: <span id="danasAktivniPGZ" style="color: white; font-weight: bold;"></span></p>
                 <p style="margin: 0; padding: 4px; color: #FF5252;">Preminuli: <span id="danasPreminuliPGZ" style="color: white; font-weight: bold;"></span>/<span id="sveukupnoPreminuliPGZ" style="color: white;"></span></p>
             </div>
             <div id="brojeviDanasSvijet" style="flex: auto; padding: 10px; background: #515C65; box-shadow: 0px 0px 15px #777; font-family: Roboto; font-size: 16px; color: white; text-align: center;">
                 <p style="margin: 0; padding: 8px; font-size: 20px;">Svijet</p>
+                <p style="margin: 0; padding: 4px; color: #00E5FF;">Aktivni: <span id="danasAktivniSvijet" style="color: white; font-weight: bold;"></span></p>
                 <p style="margin: 0; padding: 4px; color: #FFAB40;">Potvrđeni: <span id="danasPotvrdeniSvijet" style="color: white; font-weight: bold;"></span>/<span id="sveukupnoPotvrdeniSvijet" style="color: white;"></span></p>
                 <p style="margin: 0; padding: 4px; color: #69F0AE;">Izliječeni: <span id="danasIzlijeceniSvijet" style="color: white; font-weight: bold;"></span>/<span id="sveukupnoIzlijeceniSvijet" style="color: white;"></span></p>
                 <p style="margin: 0; padding: 4px; color: #FF5252;">Preminuli: <span id="danasPreminuliSvijet" style="color: white; font-weight: bold;"></span>/<span id="sveukupnoPreminuliSvijet" style="color: white;"></span></p>
             </div>
         </div></div>
         <div style="height: 20px;"></div>
-        <div style="height: 540px; width: 80%; margin: auto; background: #32373A; box-shadow: 0px 0px 15px #777;">
-            <div style="height: 500px; padding: 20px;"><div id="chartContainerHrvatska" style="margin: auto;"></div></div>
+        <div class="chartHeightHrvatskaWrap" style="height: 640px; width: 80%; margin: auto; background: #32373A; box-shadow: 0px 0px 15px #777;">
+            <div class="chartHeightHrvatska" style="height: 600px; padding: 20px;"><div id="chartContainerHrvatska" style="margin: auto;"></div></div>
         </div>
         <div style="height: 20px;"></div>
         <div class="chartHeightWrap" style="height: 540px; width: 80%; margin: auto; padding: 20px 0 20px 0; background: #32373A; box-shadow: 0px 0px 15px #777;">
